# ai_agent_with_mcp

./: README.md  json.json  pyproject.toml
src/: app_constants.py  ask_agent.py  start_mcp.py
src/agents/: mcp_agent.py  mcp_agent2.py
src/mserver/: mserver.py
